<resources>
    <string name="app_name">ArborTag</string>
    <string name="hint_loading">Fetching data from server..</string>
    <string name="no_internet">No Intenet Connection</string>
    <string name="no_internet_message">You are offline, Please check your internet connection.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="hint_or">OR</string>
    <string name="ERR_CRT_EMAIL">Enter valid email Id</string>
    <string name="ERR_EMPTY_FIRST_NAME">Please enter your first name.</string>
    <string name="ERR_EMPTY_USER_NAME">Please enter your user name.</string>
    <string name="ERR_EMPTY_LAST_NAME"> Please enter your last name.</string>
    <string name="ERR_EMPTY_EMAIL">Enter a valid email id.</string>

    <string name="ERR_EMPTY_DEVICS">Enter a valid device ID.</string>
    <string name="ERR_EMPTY_DEVICSNICK">Enter a valid device nick name.</string>
    <string name="ERR_EMPTY_ADDDEVICES_NICK">Please enter the nick name of device.</string>
    <string name="ERR_EMPTY_ADDDEVICES">Please enter the proper devices serial no.</string>

    <string name="ERR_EMPTY_PASSWORD">Password should be at least 6 Characters.</string>
    <string name="ERR_EMPTY_PASSWORD_1">Please enter valid Password.</string>
    <string name="ERR_EMPTY_NEW_PASSWORD">New Password should be at least 6 Characters.</string>
    <string name="ERR_EMPTY_CONFIRM_PASSWORD">Confirm Password should be at least 6 Characters.</string>

    <string name="ERR_EMPTY_PHONE_NO">Please enter a valid mobile number.</string>
    <string name="cancel">Cancel</string>


    <string name="ERR_EMPTY_CLINIC_NAME_">Please enter clinic name.</string>
    <string name="ERR_EMPTY_DOOR_NO">Enter Door No.</string>
    <string name="ERR_EMPTY_STREET_NAME">Enter Street Name.</string>
    <string name="ERR_EMPTY_PINCODE_NO">Enter Pincode.</string>
    <string name="ERR_EMPTY_DOCTOR_CODE">Doctor Code should not be empty.</string>
    <string name="ERR_EMPTY_GENDER">Please select your gender.</string>

    <string name="ok">OK</string>
    <string name="txt_edit">Edit</string>
    <string name="hint_createaccount">Create Account</string>
    <string name="hint_email_mobile_login">User Name</string>
<!--
    <string name="hint_email_mobile_login">Email ID / Mobile No</string>
-->

    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_Sign_with_Facebook">Sign in with Facebook</string>
    <string name="hint_Sign_with_Google">Sign in with Google</string>

    <string name="hint_Not_member_Sign_up">Not a member? Sign Up</string>
    <string name="hint_MyProfile">Profile</string>
    <string name="hint_LoginSignUp">Login / SignUp</string>
    <string name="hint_Login">Login</string>
    <string name="hint_SignUp">SignUp</string>
    <string name="hint_mySettings">Settings</string>
    <string name="hint_howtouse">How To Use</string>


    <string name="hint_customersupport">Customer Support</string>
    <string name="hint_shareapp">Share App</string>
    <string name="hint_rateourapp">Rate Our App</string>

    <string name="hint_uploadPhoto">Upload Photo</string>

    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_emailId">Email ID</string>
    <string name="hint_companyname">Company Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_cityname">City Name</string>
    <string name="hint_talplace">Tal Place</string>
    <string name="hint_disticplace">District Place</string>
    <string name="hint_country">Country</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="hint_statename">State Name</string>
    <string name="hint_Password">Password</string>
    <string name="hint_confim_password">Confirm Password</string>
    <string name="action_sort_asc">Ascending</string>
    <string name="action_sort_desc">Descending</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="hint_Already_member"><u>Already a member? Login</u></string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="history">History</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="aboutus">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_ssid">ArborTag</string>
    <string name="version">Version 1.0.0</string>
    <string name="title_activity_maps">Map</string>

    <string name="wait_write_dialog_title">Write on NFC Tag</string>
    <string name="wait_write_dialog_text">Aproach an NFC tag</string>
    <string name="tag_written_toast">Tag written</string>


</resources>
